--- a/app/src/main/res/layout/activity_wpisy_cardview.xml
+++ b/app/src/main/res/layout/activity_wpisy_cardview.xml
@@ -11,45 +11,44 @@
     android:layout_marginTop="12dp"
     android:layout_marginBottom="-6dp"
     app:cardUseCompatPadding="true">
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginHorizontal="10dp"
         android:padding="5dp"
-        android:layout_marginVertical="5dp">
+        android:layout_marginVertical="8dp">
 
-        <LinearLayout
-            android:id="@+id/lineLayout"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/nazwa"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="2dp">
+            app:layout_constrainedWidth="true"
 
-            <TextView
-                android:id="@+id/nazwa"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:gravity="left"
-                android:textSize="20sp" />
+            android:textSize="20sp"
+            app:layout_constraintEnd_toStartOf="@+id/data"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/data"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="right"
-                android:layout_weight="1"
-                android:text="TextView" />
-        </LinearLayout>
+        <TextView
+            android:id="@+id/data"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="right"
+            android:text="TextView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/opis"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="left"
-            android:layout_below="@+id/lineLayout"
-            android:layout_centerInParent="true"/>
-
-    </RelativeLayout>
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/nazwa" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </com.google.android.material.card.MaterialCardView>
