--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -9,14 +9,15 @@
     android:layout_marginVertical="6dp"
     android:layout_marginHorizontal="8dp"
     app:cardCornerRadius="16dp"
-    app:cardElevation="1dp"
+    app:cardElevation="5dp"
     app:cardUseCompatPadding="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:theme="@style/MyAppTheme"
-        android:background="?attr/colorOnBackground">
+        android:theme="@style/MyAppTheme">
+<!--        android:background=""-->
+
 <!--        android:background="@color/cardview_light_background">-->
 
         <TextView
