--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+
 <resources>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
@@ -17,4 +17,66 @@
     <color name="light_blue_600">#FF039BE5</color>
     <color name="light_blue_900">#FF01579B</color>
     <color name="my_orange">#ff4d00</color>
+
+    <color name="seed">#ff4d00</color>
+    <color name="md_theme_light_primary">#AE3200</color>
+    <color name="md_theme_light_onPrimary">#FFFFFF</color>
+    <color name="md_theme_light_primaryContainer">#FFDBD0</color>
+    <color name="md_theme_light_onPrimaryContainer">#3A0B00</color>
+    <color name="md_theme_light_secondary">#77574D</color>
+    <color name="md_theme_light_onSecondary">#FFFFFF</color>
+    <color name="md_theme_light_secondaryContainer">#FFDBD0</color>
+    <color name="md_theme_light_onSecondaryContainer">#2C150E</color>
+    <color name="md_theme_light_tertiary">#6B5E2F</color>
+    <color name="md_theme_light_onTertiary">#FFFFFF</color>
+    <color name="md_theme_light_tertiaryContainer">#F5E2A7</color>
+    <color name="md_theme_light_onTertiaryContainer">#231B00</color>
+    <color name="md_theme_light_error">#BA1A1A</color>
+    <color name="md_theme_light_errorContainer">#FFDAD6</color>
+    <color name="md_theme_light_onError">#FFFFFF</color>
+    <color name="md_theme_light_onErrorContainer">#410002</color>
+    <color name="md_theme_light_background">#FFFBFF</color>
+    <color name="md_theme_light_onBackground">#201A18</color>
+    <color name="md_theme_light_surface">#FFFBFF</color>
+    <color name="md_theme_light_onSurface">#201A18</color>
+    <color name="md_theme_light_surfaceVariant">#F5DED7</color>
+    <color name="md_theme_light_onSurfaceVariant">#53433F</color>
+    <color name="md_theme_light_outline">#85736E</color>
+    <color name="md_theme_light_inverseOnSurface">#FBEEEA</color>
+    <color name="md_theme_light_inverseSurface">#362F2D</color>
+    <color name="md_theme_light_inversePrimary">#FFB59E</color>
+    <color name="md_theme_light_shadow">#000000</color>
+    <color name="md_theme_light_surfaceTint">#AE3200</color>
+    <color name="md_theme_light_outlineVariant">#D8C2BC</color>
+    <color name="md_theme_light_scrim">#000000</color>
+    <color name="md_theme_dark_primary">#FFB59E</color>
+    <color name="md_theme_dark_onPrimary">#5E1700</color>
+    <color name="md_theme_dark_primaryContainer">#852400</color>
+    <color name="md_theme_dark_onPrimaryContainer">#FFDBD0</color>
+    <color name="md_theme_dark_secondary">#E7BDB1</color>
+    <color name="md_theme_dark_onSecondary">#442A22</color>
+    <color name="md_theme_dark_secondaryContainer">#5D4037</color>
+    <color name="md_theme_dark_onSecondaryContainer">#FFDBD0</color>
+    <color name="md_theme_dark_tertiary">#D8C68D</color>
+    <color name="md_theme_dark_onTertiary">#3A3005</color>
+    <color name="md_theme_dark_tertiaryContainer">#52461A</color>
+    <color name="md_theme_dark_onTertiaryContainer">#F5E2A7</color>
+    <color name="md_theme_dark_error">#FFB4AB</color>
+    <color name="md_theme_dark_errorContainer">#93000A</color>
+    <color name="md_theme_dark_onError">#690005</color>
+    <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
+    <color name="md_theme_dark_background">#201A18</color>
+    <color name="md_theme_dark_onBackground">#EDE0DC</color>
+    <color name="md_theme_dark_surface">#201A18</color>
+    <color name="md_theme_dark_onSurface">#EDE0DC</color>
+    <color name="md_theme_dark_surfaceVariant">#53433F</color>
+    <color name="md_theme_dark_onSurfaceVariant">#D8C2BC</color>
+    <color name="md_theme_dark_outline">#A08C87</color>
+    <color name="md_theme_dark_inverseOnSurface">#201A18</color>
+    <color name="md_theme_dark_inverseSurface">#EDE0DC</color>
+    <color name="md_theme_dark_inversePrimary">#AE3200</color>
+    <color name="md_theme_dark_shadow">#000000</color>
+    <color name="md_theme_dark_surfaceTint">#FFB59E</color>
+    <color name="md_theme_dark_outlineVariant">#53433F</color>
+    <color name="md_theme_dark_scrim">#000000</color>
 </resources>
