--- a/app/src/main/res/layout/activity_etap_terapi.xml
+++ b/app/src/main/res/layout/activity_etap_terapi.xml
@@ -16,73 +16,62 @@
             android:orientation="vertical"
             android:padding="16dp">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Pomiary" />
+            <!--            <TextView-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_marginTop="10dp"-->
+            <!--                android:text="Pomiary" />-->
 
             <LinearLayout
                 android:id="@+id/listaElementow"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:orientation="vertical" />
 
-            </LinearLayout>
 
-            <LinearLayout
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/editTextNotatkaLayout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="12dp"
-                android:orientation="vertical">
+                android:layout_height="wrap_content"
+                android:hint="Notatka"
+                app:endIconMode="clear_text">
 
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Notatka wykonywanego pomiaru"
-                    />
-
-                <EditText
+                <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/editTextNotatka"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:ems="10"
                     android:gravity="start|top"
                     android:inputType="textMultiLine"
-                    android:minLines="4"/>
+                    android:minLines="4" />
 
-            </LinearLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
 
-            <LinearLayout
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/godzinaWykonaniaLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginTop="12dp">
+                android:layout_marginTop="16dp"
+                android:hint="Godzina wykonania pomiaru"
+                app:endIconMode="clear_text">
 
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text = "Godzina wykonania pomiaru:"
-
-                    />
-                <TimePicker
-                    android:id="@+id/dataWykonania"
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/godzinaWykonania"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:timePickerMode="spinner" />
-            </LinearLayout>
+                    android:clickable="false"
+                    android:cursorVisible="false"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false" />
+
+            </com.google.android.material.textfield.TextInputLayout>
 
 
             <Button
                 android:id="@+id/button_save_edit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                />
+                android:layout_marginTop="24dp" />
 
         </LinearLayout>
     </ScrollView>
