--- a/app/src/main/res/layout/activity_terapia_dopisz_x_godzin.xml
+++ b/app/src/main/res/layout/activity_terapia_dopisz_x_godzin.xml
@@ -8,63 +8,48 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginVertical="5dp"
-        android:padding="20dp">
+        android:layout_marginTop="16dp">
 
-        <LinearLayout
-            android:id="@+id/linearLayout"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/editTextTime1Layout"
+            android:hint="Godzina rozpoczęcia"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            app:endIconMode="clear_text">
 
-            <TextView
-                android:id="@+id/textViewTime1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Godzina rozpoczęcia" />
-
-            <EditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/editTextTime1"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ems="10"
                 android:clickable="false"
                 android:cursorVisible="false"
                 android:focusable="false"
-                android:focusableInTouchMode="false"
-                android:inputType="time"/>
+                android:focusableInTouchMode="false" />
 
-        </LinearLayout>
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <LinearLayout
-            android:id="@+id/linearLayout2"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/editTextTime2Layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:layout_marginTop="8dp"
+            android:hint="Godzina zakonczenia"
+            app:endIconMode="clear_text"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+            app:layout_constraintTop_toBottomOf="@+id/editTextTime1Layout">
 
-            <TextView
-                android:id="@+id/textViewTime2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Godzina zakonczenia" />
-
-            <EditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/editTextTime2"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ems="10"
                 android:clickable="false"
                 android:cursorVisible="false"
                 android:focusable="false"
-                android:focusableInTouchMode="false"
-                android:inputType="time" />
+                android:focusableInTouchMode="false" />
 
-        </LinearLayout>
+        </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
             android:id="@+id/textView3"
@@ -76,7 +61,7 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/czestotliwoscWyk"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+            app:layout_constraintTop_toBottomOf="@+id/editTextTime2Layout" />
 
         <TextView
             android:id="@+id/textView6"
@@ -88,17 +73,18 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/czestotliwoscWyk"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+            app:layout_constraintTop_toBottomOf="@+id/editTextTime2Layout" />
 
         <TimePicker
             android:id="@+id/czestotliwoscWyk"
             android:layout_width="238dp"
             android:layout_height="163dp"
+            android:layout_marginTop="8dp"
             android:timePickerMode="spinner"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+            app:layout_constraintTop_toBottomOf="@+id/editTextTime2Layout" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
