--- a/app/src/main/res/layout/activity_terapia_edytuj.xml
+++ b/app/src/main/res/layout/activity_terapia_edytuj.xml
@@ -1,127 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".terapie.TerapiaEdytuj">
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp">
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView7"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Elementy terapi"
-                android:textColor="@color/colorPrimary"
-                android:textStyle="bold"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:layout_editor_absoluteX="0dp" />
+                android:orientation="vertical"
+                android:padding="16dp">
 
-            <TextView
-                android:id="@+id/textViewElementy"
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/elementyLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:lineSpacingExtra="12sp"
-                android:textColor="?android:attr/textColorPrimary"
-                app:layout_constraintTop_toBottomOf="@+id/textView7"
-                tools:layout_editor_absoluteX="7dp" />
+                android:layout_marginTop="16dp"
+                android:hint="Elementy terapi"
+                app:endIconMode="clear_text">
 
-            <TextView
-                android:id="@+id/textView10"
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/elementy"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:clickable="false"
+                    android:cursorVisible="false"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
+                    android:inputType="textMultiLine"
+                    android:isScrollContainer="false"
+                    android:lineSpacingExtra="10sp"
+                    android:minLines="2"
+                    android:pointerIcon="vertical_text"
+                    android:textStyle="bold" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/dataRozpoczeciaLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:layout_weight="1"
-                android:text="Data rozpoczęcia terapi:"
-                android:textSize="15sp"
-                app:layout_constraintTop_toBottomOf="@+id/textViewElementy"
-                tools:layout_editor_absoluteX="16dp" />
+                android:layout_marginTop="16dp"
+                android:hint="Data rozpoczęcia terapi"
+                app:endIconMode="clear_text">
 
-            <EditText
-                android:id="@+id/dataRozpoczecia"
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/dataRozpoczecia"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:clickable="false"
+                    android:cursorVisible="false"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/dataZakonczeniaLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:clickable="false"
-                android:cursorVisible="false"
-                android:focusable="false"
-                android:focusableInTouchMode="false"
-                android:inputType="date"
-                app:layout_constraintTop_toBottomOf="@+id/textView11"
-                tools:layout_editor_absoluteX="25dp" />
+                android:layout_marginTop="16dp"
+                android:hint="Data zakonczenia terapi"
+                app:endIconMode="clear_text">
 
-            <TextView
-                android:id="@+id/textView11"
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/dataZakonczenia"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:clickable="false"
+                    android:cursorVisible="false"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/NotatkaLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:layout_weight="1"
-                android:text="Data zakonczenia terapi:"
-                android:textSize="15sp"
-                app:layout_constraintTop_toBottomOf="@+id/dataZakonczenia"
-                tools:layout_editor_absoluteX="16dp" />
+                android:layout_marginTop="16dp"
+                android:hint="Notatka"
+                app:endIconMode="clear_text">
 
-            <EditText
-                android:id="@+id/dataZakonczenia"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:clickable="false"
-                android:cursorVisible="false"
-                android:focusable="false"
-                android:focusableInTouchMode="false"
-                android:inputType="date"
-                app:layout_constraintTop_toBottomOf="@+id/textView10"
-                tools:layout_editor_absoluteX="16dp" />
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/Notatka"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:clickable="false"
+                    android:cursorVisible="false"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
+                    android:gravity="start|top"
+                    android:inputType="textMultiLine"
+                    android:minLines="4" />
 
-            <TextView
-                android:id="@+id/textView9"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:text="Notatka"
-                android:textSize="15sp"
-                app:layout_constraintTop_toBottomOf="@+id/dataRozpoczecia"
-                tools:layout_editor_absoluteX="27dp" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <EditText
-                android:id="@+id/editTextNotatka"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_weight="1"
-                android:ems="10"
-                android:clickable="false"
-                android:cursorVisible="false"
-                android:focusable="false"
-                android:focusableInTouchMode="false"
-                android:gravity="start|top"
-                android:inputType="textMultiLine"
-                android:minLines="4"
-                app:layout_constraintTop_toBottomOf="@+id/textView9"
-                tools:layout_editor_absoluteX="16dp" />
+        </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycleView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
-                android:layout_gravity="center"
-                android:layout_marginTop="24dp"
-                app:layout_constraintTop_toBottomOf="@+id/editTextNotatka"
-                tools:layout_editor_absoluteX="16dp"></androidx.recyclerview.widget.RecyclerView>
+                android:nestedScrollingEnabled="false"
+                android:layout_gravity="center" />
 
         </LinearLayout>
-    </ScrollView>
 
-</RelativeLayout>
+
+    </androidx.core.widget.NestedScrollView>
+
+
+
+    <!--        app:layout_constraintTop_toBottomOf="@+id/editTextNotatka" -->
+
+</LinearLayout>
