--- a/app/src/main/res/layout/activity_wpisy_cardview.xml
+++ b/app/src/main/res/layout/activity_wpisy_cardview.xml
@@ -22,7 +22,7 @@
         <TextView
             android:id="@+id/nazwa"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="fill_parent"
             app:layout_constrainedWidth="true"
 
             android:textSize="20sp"
