--- a/app/src/main/res/layout/activity_wpisy_dopisz.xml
+++ b/app/src/main/res/layout/activity_wpisy_dopisz.xml
@@ -35,7 +35,7 @@
         android:layout_marginBottom="16dp">
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/jednostka"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="40dp"
