--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -27,15 +27,19 @@
 
             <Button
                 android:id="@+id/button1"
-                android:layout_width="wrap_content"
+                style="@style/Widget.Material3.Button.IconButton"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:background="@color/sb__transparent"
-                android:text="wcześniej"
+                android:layout_marginStart="8dp"
+                android:drawableLeft="@drawable/ic_arrow_back_ios_24"
+                android:onClick="dalej"
+                android:drawableTint="@color/white"
                 android:textColor="@color/white"
-                android:textSize="15dp"
-                android:textStyle="bold"
+                android:text="Wcześniej"
+
+                app:layout_constrainedWidth="true"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/Data"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -52,17 +56,21 @@
 
             <Button
                 android:id="@+id/button2"
-                android:layout_width="wrap_content"
+                style="@style/Widget.Material3.Button.IconButton"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="24dp"
-                android:background="@color/sb__transparent"
+                android:layout_marginEnd="8dp"
+                android:drawableRight="@drawable/ic_arrow_forward_ios_24"
+                android:drawableTint="@color/white"
                 android:onClick="dalej"
-                android:text="Później"
                 android:textColor="@color/white"
-                android:textSize="15dp"
-                android:textStyle="bold"
+                android:text="Póżniej"
+
+
+                app:layout_constrainedWidth="true"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/Data"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -72,7 +80,9 @@
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_marginTop="4dp"
-            android:scrollbars="vertical"></androidx.recyclerview.widget.RecyclerView>
+            android:scrollbars="vertical"
+            android:layoutAnimation="@anim/layout_animation"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
     </LinearLayout>
 
 </FrameLayout>
